plugins {
    id'application'
    id'com.github.johnrengelman.shadow' version '5.2.0'
}

def jdaVersion = '4.1.1_108'

group 'stinggy.hbot'
version '1.0-SNAPSHOT'
mainClassName = 'bot.hBotMain'

sourceCompatibility = targetCompatibility = 13

repositories {
    jcenter()
}

dependencies {
    testImplementation "junit:junit:4.13"
    implementation "net.dv8tion:JDA:$jdaVersion"
    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.13.0'
    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.13.0'
    implementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.13.0'
    implementation 'org.jsoup:jsoup:1.12.1'
    implementation 'org.apache.commons:commons-text:1.8'
    implementation 'org.json:json:20190722'
    implementation 'org.apache.httpcomponents:httpclient:4.5.10'
    implementation 'org.apache.httpcomponents:httpcore:4.4.12'
}

jar {
    manifest {
        attributes 'Class-Path': '.'
    }
}

shadowJar {
    configurations = [project.configurations.runtimeClasspath]
}

tasks.withType(JavaCompile) {
    options.compilerArgs += "--enable-preview"
}

tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}

tasks.withType(JavaExec) {
    jvmArgs += '--enable-preview'
}

compileJava.options.encoding = 'UTF-8'